adding bash file to run experiments and preprocessed.py improved to use optional arguments

--- a/Probando_Audio.ipynb
+++ b/Probando_Audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,11 @@
     "\n",
     "import os\n",
     "import shutil\n",
-    "\n",
-    "import IPython\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from tqdm import tqdm_notebook\n",
-    "from sklearn.cross_validation import StratifiedKFold\n",
     "\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('ggplot')"
@@ -26,18 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train = pd.read_csv(\"../../real_data/train.csv\")\n",
+    "train = pd.read_csv('../../real_data/FSDnoisy18k.meta/test.csv')\n",
     "#test = pd.read_csv(\"../../real_data/sample_submission.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv(\"../../Kaggle_data/train.csv\")\n"
@@ -45,22 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training examples= 9473   Number of classes= 41\n",
-      "['Hi-hat' 'Saxophone' 'Trumpet' 'Glockenspiel' 'Cello' 'Knock'\n",
-      " 'Gunshot_or_gunfire' 'Clarinet' 'Computer_keyboard' 'Keys_jangling'\n",
-      " 'Snare_drum' 'Writing' 'Laughter' 'Tearing' 'Fart' 'Oboe' 'Flute' 'Cough'\n",
-      " 'Telephone' 'Bark' 'Chime' 'Bass_drum' 'Bus' 'Squeak' 'Scissors'\n",
-      " 'Harmonica' 'Gong' 'Microwave_oven' 'Burping_or_eructation' 'Double_bass'\n",
-      " 'Shatter' 'Fireworks' 'Tambourine' 'Cowbell' 'Electric_piano' 'Meow'\n",
-      " 'Drawer_open_or_close' 'Applause' 'Acoustic_guitar' 'Violin_or_fiddle'\n",
-      " 'Finger_snapping']\n"
+      "Number of training examples= 17585   Number of classes= 20\n",
+      "['Walk_or_footsteps' 'Coin_(dropping)' 'Dishes_and_pots_and_pans'\n",
+      " 'Bass_guitar' 'Crash_cymbal' 'Slam' 'Clapping' 'Rain' 'Wind' 'Piano'\n",
+      " 'Engine' 'Glass' 'Fire' 'Acoustic_guitar' 'Fart' 'Fireworks' 'Hi-hat'\n",
+      " 'Squeak' 'Tearing' 'Writing']\n"
      ]
     }
    ],
@@ -71,92 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fname</th>\n",
-       "      <th>label</th>\n",
-       "      <th>manually_verified</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00044347.wav</td>\n",
-       "      <td>Hi-hat</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>001ca53d.wav</td>\n",
-       "      <td>Saxophone</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>002d256b.wav</td>\n",
-       "      <td>Trumpet</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0033e230.wav</td>\n",
-       "      <td>Glockenspiel</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00353774.wav</td>\n",
-       "      <td>Cello</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          fname         label  manually_verified\n",
-       "0  00044347.wav        Hi-hat                  0\n",
-       "1  001ca53d.wav     Saxophone                  1\n",
-       "2  002d256b.wav       Trumpet                  0\n",
-       "3  0033e230.wav  Glockenspiel                  1\n",
-       "4  00353774.wav         Cello                  1"
+       "(947, 3)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.head()"
+    "train.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import librosa\n",
@@ -350,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = data.astype(float)\n",
@@ -408,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_new = np.tile(data,mul)"
@@ -522,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
