final pre processing code and datagit add Probando_Audio.ipynb preprocess_data_new.py processed_data_train.hdf5 processed_data_test.hdf5 run_experiment_preprocessing.sh

--- a/Probando_Audio.ipynb
+++ b/Probando_Audio.ipynb
@@ -38,19 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data = h5py.File('processed_data_train.hdf5', 'r')\n",
-    "\n"
+    "\n",
+    "data = h5py.File('processed_data_test.hdf5', 'r')\n",
+    "def get_objects(name, obj):\n",
+    "    if 'Sub_Group' in name:\n",
+    "        return obj\n",
+    "group = data.visititems(get_objects)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -58,16 +62,16 @@
     {
      "data": {
       "text/plain": [
-       "<HDF5 file \"processed_data_train.hdf5\" (mode r)>"
+       "<KeysViewHDF5 ['all_inputs', 'manually_verified', 'noisy_small', 'targets']>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.keys()"
    ]
   },
   {
