--- a/Probando_Audio.ipynb
+++ b/Probando_Audio.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,6 +18,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from tqdm import tqdm_notebook\n",
+    "import h5py\n",
     "\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('ggplot')"
@@ -24,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv('../../real_data/FSDnoisy18k.meta/test.csv')\n",
@@ -33,41 +38,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv(\"../../Kaggle_data/train.csv\")\n"
+    "\n",
+    "data = h5py.File('processed_data_test.hdf5', 'r')\n",
+    "def get_objects(name, obj):\n",
+    "    if 'Sub_Group' in name:\n",
+    "        return obj\n",
+    "group = data.visititems(get_objects)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of training examples= 17585   Number of classes= 20\n",
-      "['Walk_or_footsteps' 'Coin_(dropping)' 'Dishes_and_pots_and_pans'\n",
-      " 'Bass_guitar' 'Crash_cymbal' 'Slam' 'Clapping' 'Rain' 'Wind' 'Piano'\n",
-      " 'Engine' 'Glass' 'Fire' 'Acoustic_guitar' 'Fart' 'Fireworks' 'Hi-hat'\n",
-      " 'Squeak' 'Tearing' 'Writing']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['all_inputs', 'manually_verified', 'noisy_small', 'targets']>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Number of training examples=\", train.shape[0], \"  Number of classes=\", len(train.label.unique()))\n",
-    "print(train.label.unique())"
+    "data.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -136,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -155,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -175,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "FileNotFoundError",
@@ -234,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -263,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -295,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -316,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -365,7 +393,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -416,7 +446,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -459,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
