--- a/MLP_CW2/data/Untitled.ipynb
+++ b/MLP_CW2/data/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "h5py._hl.dataset.Dataset"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,8 +23,7 @@
     "loaded = h5py.File('processed_data_test.hdf5', 'r')\n",
     "\n",
     "inputs = loaded['all_inputs']\n",
-    "targets = loaded['targets']\n",
-    "type(inputs)"
+    "targets = loaded['targets']\n"
    ]
   },
   {
