Improved reading by batch

--- a/MLP_CW2/data/Untitled.ipynb
+++ b/MLP_CW2/data/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,37 +12,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_ = np.random.randint(low=0,high=19,size=15)\n",
+    "y_ = np.random.randint(low=0,high=19,size=130)\n",
     "\n",
-    "x_1 =np.random.random((5,15))\n",
-    "x_2 =np.random.random((5,15))\n",
-    "x_3 =np.random.random((5,15))"
+    "x_1 =np.random.random((64,100))\n",
+    "x_2 =np.random.random((64,100))\n",
+    "x_3 =np.random.random((2,100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "hdf5_store = h5py.File('test.hdf5', \"w\")\n",
     "\n",
-    "all_inputs = hdf5_store.create_dataset(\"all_inputs\" , (15,15), chunks= (3, 5)   ,compression=\"gzip\")  \n",
+    "all_inputs = hdf5_store.create_dataset(\"all_inputs\" , (130,100), chunks= (64, 100)   ,compression=\"gzip\")  \n",
     "targets = hdf5_store.create_dataset(\"targets\", data = y_ ,compression=\"gzip\")\n",
     "\n",
-    "all_inputs[0:5] = x_1\n",
-    "all_inputs[5:10] = x_2\n",
-    "all_inputs[10:] = x_3\n",
+    "all_inputs[0:64] = x_1\n",
+    "all_inputs[64:128] = x_2\n",
+    "all_inputs[128:] = x_3\n",
     "hdf5_store.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdf5_store = h5py.File('train.hdf5', \"w\")\n",
+    "\n",
+    "all_inputs = hdf5_store.create_dataset(\"all_inputs\" , (64,2048000), chunks= (64, 2048000)   ,compression=\"gzip\")  \n",
+    "targets = hdf5_store.create_dataset(\"targets\", data = y_ ,compression=\"gzip\")\n",
+    "\n",
+    "all_inputs[0:64] = x_1\n",
+    "all_inputs[64:] = x_2\n",
+    "hdf5_store.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdf5_store = h5py.File('val.hdf5', \"w\")\n",
+    "\n",
+    "all_inputs = hdf5_store.create_dataset(\"all_inputs\" , (64,2048000), chunks= (64, 2048000)   ,compression=\"gzip\")  \n",
+    "targets = hdf5_store.create_dataset(\"targets\", data = y_ ,compression=\"gzip\")\n",
+    "\n",
+    "all_inputs[0:64] = x_1\n",
+    "all_inputs[64:] = x_2\n",
+    "hdf5_store.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,22 +83,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = x_1.reshape((5,-1,3,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5, 1, 3, 5)"
+       "array([[[0.09753415, 0.52080153, 0.1981691 , 0.06093873, 0.18866547],\n",
+       "        [0.05333643, 0.32996561, 0.69657368, 0.84276217, 0.9296486 ],\n",
+       "        [0.10994698, 0.45955305, 0.62849678, 0.98721867, 0.35848183]]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_1.reshape((5,-1,3,5)).shape"
+    "x[0]"
    ]
   },
   {
@@ -91,12 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(130, 100)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for k, v in d.items():\n",
-    "    h.create_dataset(k.strftime('%Y-%m-%dT%H:%M:%SZ'), data=np.array(v, dtype=np.int8))"
+    "hdf5_store['all_inputs'][:].shape"
    ]
   },
   {
@@ -105,18 +158,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "len(hdf5_store)"
+    "for i in range(4):\n",
+    "    print(i)"
    ]
   },
   {
