--- a/MLP_CW2/mlp/pytorch_experiment_scripts/Untitled.ipynb
+++ b/MLP_CW2/mlp/pytorch_experiment_scripts/Untitled.ipynb
@@ -113,6 +113,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
