added one hot encode

--- a/MLP_CW2/mlp/pytorch_experiment_scripts/Untitled.ipynb
+++ b/MLP_CW2/mlp/pytorch_experiment_scripts/Untitled.ipynb
@@ -27,10 +27,38 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KeysView(<numpy.lib.npyio.NpzFile object at 0x7f9885272940>)\n"
+     ]
+    }
+   ],
    "source": [
-    "train_data = data_providers.AudioDataProvider('test', batch_size=10,\n",
+    "train_data = data_providers.EMNISTDataProvider('test', batch_size=100,\n",
     "                                               rng=rng,shuffle_order=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([44, 43, 20, ...,  1, 35, 35], dtype=uint8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.targets"
    ]
   },
   {
