validation added, paths fixed

--- a/Probando_Audio.ipynb
+++ b/Probando_Audio.ipynb
@@ -24,12 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17310, 6)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train = pd.read_csv('../../real_data/FSDnoisy18k.meta/test.csv')\n",
-    "#test = pd.read_csv(\"../../real_data/sample_submission.csv\")"
+    "train = pd.read_csv('../../real_data/FSDnoisy18k.meta/train_set.csv')\n",
+    "train.shape#test = pd.read_csv(\"../../real_data/sample_submission.csv\")\n"
    ]
   },
   {
