process per batch

--- a/MLP_CW2/mlp/pytorch_experiment_scripts/Untitled.ipynb
+++ b/MLP_CW2/mlp/pytorch_experiment_scripts/Untitled.ipynb
@@ -159,6 +159,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"../../data/data.csv\"\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import soundfile\n",
+    "import os\n",
+    "path = \"../../data/audio\"\n",
+    "audio = \"70111.wav\"\n",
+    "path = os.path.join(path, audio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, source_fs = soundfile.read(file=path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
